2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_pixmap_damage):
	  - force damage on shadow pixmap paint, some damage can be eaten 
	    between send and process.

2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c (impl_ccm_screen_paint):
	  - Don't check window state on remove.

2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-window.c (ccm_window_on_pixmap_damaged),
	(ccm_window_get_pixmap):
	  - Connect after pixmap damage signal to be sure plugin damage is done 
	    before damage window.

2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_pixmap_damage),
	(ccm_shadow_window_resize):
	* src/ccm-window.c (ccm_window_on_pixmap_damaged):
	  - Offset pixmap damage with window geometry instead with get_origin.
	  - Don't send damage on pixmap shadow damage.

2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-window.c (ccm_window_check_mask):
	  - Apply window opacity on check mask

2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-window-plugin.c:
	* src/ccm-window-plugin.h:
	* src/ccm-window.c:
	  - Add get pixmap interface.
	  - Check mask surface if pixmap size has increase by a plugin.
	* lib/test-boxed-blur.c (main):
	* lib/Makefile.am
	* lib/ccm-cairo-utils.c:
	* lib/ccm-cairo-utils.h:
	  - Use Mathias Hasselmann pixman blur from
	    http://taschenorakel.de/mathias/2008/11/24/blur-effect-cairo/
	* plugins/shadow/ccm-shadow.c:
	* plugins/shadow/ccm-shadow.plugin.desktop.in:
	* plugins/shadow/ccm-shadow.schemas.in:
	  - Rewrite shadow plugin to be more efficient. Draw shadow directly
	    on pixmap instead on draw.
	* plugins/decoration/ccm-decoration.c:
	* plugins/decoration/ccm-decoration.plugin.desktop.in:
	  - Create an A8 similar surface for mask.
	* plugins/mosaic/ccm-mosaic.c:
	  - Begin to rewrite mosaic plugin to add more efficient window matrix